--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ jobs:
       install: bundle install
       script:
       - ./Scripts/jazzy.sh
+      - xcrun simctl create "Apple TV 1080p" com.apple.CoreSimulator.SimDeviceType.Apple-TV-1080p com.apple.CoreSimulator.SimRuntime.tvOS-11-0
+      - bundle exec rake package:release
       deploy:
         - provider: releases
           api_key:
